# LLM-Prototype

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
.devcontainer/: devcontainer.json
configs/: tiny.json
docs/: local-llm-upgrade-plan.md
examples/: generate.py
local_knowledge/: local_content_guide.md  model_components.md  prototype_overview.md  sample_faq.txt
local_training_data/: README.md
public/: app.js  index.html  styles.css
scripts/: github-start.js  train.py
src/llm_prototype/: __init__.py  config.py  inference.py  model.py  tokenizer.py
tests/: server.test.js  test_llm_prototype.py
