[project]
name = "llm-prototype"
version = "0.1.0"
description = "A from-scratch educational large language model prototype with tokenizer, transformer, generation, and checkpoints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
